# Orchestration-ESGI-5IABD

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  ci_cd.yaml
src/dags/: retrain_dag.py
src/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.train
src/frontend/: app.py
src/mlproject/: api.py  config.py  data.py  evaluate.py  evaluation.py  features.py  tracking.py  train.py  train_baseline.py  train_models.py  train_optuna.py
