[project]
name = "mlproject"
version = "0.1.0"
description = "Projet fil rouge MLOps - classification binaire"
requires-python = ">=3.10"
dependencies = [
    # core : partagé entre train, api et evaluate
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "python-dotenv>=1.0",
    "mlflow>=2.10",
    "numpy>=1.26",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
train = [
    "shap>=0.44",
    "numba>=0.59",
    "matplotlib>=3.8",
    "optuna>=3.5",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]
frontend = [
    "streamlit>=1.32",
    "httpx>=0.27",
    "pandas>=2.0",
]
dev = [
    "ruff>=0.3",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# mlflow stubs ne couvrent pas mlflow.data.*
[[tool.mypy.overrides]]
module = "mlflow.*"
ignore_errors = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlproject"]
